--- a/boot-front/package.json
+++ b/boot-front/package.json
@@ -8,14 +8,17 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
+    "@chenfengyuan/vue-qrcode": "^2.0.0",
     "ant-design-vue": "^3.0.0-beta.9",
     "axios": "^0.25.0",
+    "core-js": "^3.8.3",
     "dayjs": "^1.10.7",
     "element-plus": "^1.3.0-beta.7",
+    "express": "^4.17.3",
     "lodash": "^4.17.21",
+    "qrcode": "^1.5.0",
+    "vue": "^3.2.31",
     "vue-axios": "^3.4.0",
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
